// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keeps objects as is 1`] = `
"\\"use strict\\";

var fill1 = function () {
  var top = arguments.length > 0 && arguments[0] !== undefined ? arguments[0] : 0;
  var left = arguments.length > 1 && arguments[1] !== undefined ? arguments[1] : 0;
  var right = arguments.length > 2 && arguments[2] !== undefined ? arguments[2] : 0;
  var bottom = arguments.length > 3 && arguments[3] !== undefined ? arguments[3] : 0;
  return {
    position: 'absolute',
    top: top,
    right: right,
    bottom: bottom,
    left: left
  };
};

var fill2 = function () {
  var top = arguments.length > 0 && arguments[0] !== undefined ? arguments[0] : 0;
  var left = arguments.length > 1 && arguments[1] !== undefined ? arguments[1] : 0;
  var right = arguments.length > 2 && arguments[2] !== undefined ? arguments[2] : 0;
  var bottom = arguments.length > 3 && arguments[3] !== undefined ? arguments[3] : 0;
  return {
    position: 'absolute',
    top: top,
    right: right,
    bottom: bottom,
    left: left
  };
};

exports.__linariaPreval = [fill1, fill2];"
`;

exports[`keeps only code which is related to \`a\` 1`] = `
"\\"use strict\\";

var _require = require('…'),
    color = _require.whiteColor,
    anotherColor = _require.anotherColor;

var a = color || anotherColor;
color.green = '#0f0';
exports.__linariaPreval = [a];"
`;

exports[`keeps only code which is related to \`anotherColor\` 1`] = `
"\\"use strict\\";

var _require = require('…'),
    anotherColor = _require.anotherColor;

exports.__linariaPreval = [anotherColor];"
`;

exports[`keeps only code which is related to \`color\` 1`] = `
"\\"use strict\\";

var _require = require('…'),
    color = _require.whiteColor;

color.green = '#0f0';
exports.__linariaPreval = [color];"
`;

exports[`removes all 1`] = `
"\\"use strict\\";

exports.__linariaPreval = [];"
`;

exports[`shakes assignment patterns 1`] = `
"\\"use strict\\";

function _toArray(arr) { return _arrayWithHoles(arr) || _iterableToArray(arr) || _nonIterableRest(); }

function _nonIterableRest() { throw new TypeError(\\"Invalid attempt to destructure non-iterable instance\\"); }

function _iterableToArray(iter) { if (Symbol.iterator in Object(iter) || Object.prototype.toString.call(iter) === \\"[object Arguments]\\") return Array.from(iter); }

function _arrayWithHoles(arr) { if (Array.isArray(arr)) return arr; }

function _extends() { _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in ) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; }; return _extends.apply(this, arguments); }

var _ = 2,
    identifier = _ === void 0 ? 1 : _;
var _a$b = {
  a: 1,
  b: 2
};
_a$b = _a$b === void 0 ? {} : _a$b;

var object = _extends({}, _a$b);

var _ref = [1, 2, 3, 4];
_ref = _ref === void 0 ? [] : _ref;

var _ref2 = _toArray(_ref),
    array = _ref2.slice(0);

var obj = {
  member: null
};
var _2 = 1;
obj.member = _2 === void 0 ? 42 : _2;
exports.__linariaPreval = [identifier, object, array, obj];"
`;

exports[`shakes es5 exports 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.redColor = 'red';
Object.defineProperty(exports, \\"greenColor\\", {
  enumerable: true,
  get: function () {
    return 'green';
  }
});"
`;

exports[`shakes exports 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});

var _ = require(\\"\\\\u2026\\");

var a = _.whiteColor;
exports.__linariaPreval = [a];"
`;

exports[`shakes imports 1`] = `
"\\"use strict\\";

function _typeof(obj) { \\"@babel/helpers - typeof\\"; if (typeof Symbol === \\"function\\" && typeof Symbol.iterator === \\"symbol\\") { _typeof = function (obj) { return typeof obj; }; } else { _typeof = function (obj) { return obj && typeof Symbol === \\"function\\" && obj.constructor === Symbol && obj !== Symbol.prototype ? \\"symbol\\" : typeof obj; }; } return _typeof(obj); }

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});

var _ = _interopRequireWildcard(require(\\"\\\\u2026\\"));

function _getRequireWildcardCache() { if (typeof WeakMap !== \\"function\\") return null; var cache = new WeakMap(); _getRequireWildcardCache = function () { return cache; }; return cache; }

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } if (obj === null || _typeof(obj) !== \\"object\\" && typeof obj !== \\"function\\") { return { default: obj }; } var cache = _getRequireWildcardCache(); if (cache && cache.has(obj)) { return cache.get(obj); } var newObj = {}; var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor; for (var key in ) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null; if (desc && (desc.get || desc.set)) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } newObj.default = obj; if (cache) { cache.set(obj, newObj); } return newObj; }

exports.__linariaPreval = [_.whiteColor, _.default];"
`;

exports[`shakes sequence expression 1`] = `
"\\"use strict\\";

var color1 = (function () {
  return 'blue';
});
var local = '';
var color2 = (local = color1(), function () {
  return local;
});
exports.__linariaPreval = [color2];"
`;

exports[`should keep member expression key 1`] = `
"\\"use strict\\";

var key = 'blue';
var obj = {
  blue: '#00F'
};
var blue = obj[key];
exports.__linariaPreval = [blue];"
`;
